force-app/main/default/objects/Portal_Directory_Search_Criteria__mdt/Portal_Directory_Search_Criteria__mdt.object-meta.xml
<CustomObject>
    <label>Portal Directory Search Criteria</label>
    <pluralLabel>Portal Directory Search Criterion</pluralLabel>
</CustomObject>