force-app/main/default/objects/Portal_Directory_Search_Criteria__mdt/fields/Cache_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Cache_API_Name__c</fullName>
    <description>Name of the Directory Search Filters Cache if any.</description>
    <label>Cache API Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>