force-app/main/default/objects/Portal_Directory_Search_Criteria__mdt/fields/Cache_Logic_Field_On_Object__c.field-meta.xml
<CustomField>
    <fullName>Cache_Logic_Field_On_Object__c</fullName>
    <label>Cache Logic Field On Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>