force-app/main/default/objects/Portal_Directory_Search_Criteria__mdt/fields/Default_Value__c.field-meta.xml
<CustomField>
    <fullName>Default_Value__c</fullName>
    <description>The default value of this search criteria.</description>
    <label>Default Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>