force-app/main/default/objects/Portal_Directory_Search_Criteria__mdt/fields/Directory_Location__c.field-meta.xml
<CustomField>
    <fullName>Directory_Location__c</fullName>
    <description>Location of the Directory. Corresponds to the Location design attribute on the Directory component. Use All to post to all Directories. For multiple Directories, seperate with a semi-colon</description>
    <label>Directory Location</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>