force-app/main/default/objects/Portal_Directory_Search_Criteria__mdt/fields/Display_Order__c.field-meta.xml
<CustomField>
    <fullName>Display_Order__c</fullName>
    <description>Order to display this Search Criteria relative to the other Search Criteria in the same Search Category.</description>
    <label>Display Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>