force-app/main/default/objects/Portal_Directory_Search_Criteria__mdt/fields/Field_Logic__c.field-meta.xml
<CustomField>
    <fullName>Field_Logic__c</fullName>
    <description>The field logic that this Search Criteria follows.</description>
    <label>Field Logic</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>