force-app/main/default/objects/Portal_Directory_Search_Criteria__mdt/fields/Geolocation_Address_Input__c.field-meta.xml
<CustomField>
    <fullName>Geolocation_Address_Input__c</fullName>
    <label>Geolocation Address Input</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Street</fullName>
                <default>true</default>
                <label>Street</label>
            </value>
            <value>
                <fullName>City</fullName>
            </value>
            <value>
                <fullName>State</fullName>
            </value>
            <value>
                <fullName>Country</fullName>
            </value>
            <value>
                <fullName>Postal Code</fullName>
            </value>
            <value>
                <fullName>Distance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>