force-app/main/default/objects/Portal_Directory_Search_Criteria__mdt/fields/Portal_Directory_Search_Category__c.field-meta.xml
<CustomField>
    <fullName>Portal_Directory_Search_Category__c</fullName>
    <label>Portal Directory Search Category</label>
    <referenceTo>Portal_Directory_Search_Category__mdt</referenceTo>
    <relationshipLabel>Portal Directory Search Criterion</relationshipLabel>
    <relationshipName>Portal_Directory_Search_Criterion</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>