force-app/main/default/objects/Portal_Directory_Search_Criteria__mdt/fields/Search_Criteria_Name__c.field-meta.xml
<CustomField>
    <fullName>Search_Criteria_Name__c</fullName>
    <description>Name of the Search Criteria that appears on the Directory.</description>
    <label>Search Criteria Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>