force-app/main/default/objects/Portal_Directory_Search_Criteria__mdt/fields/Search_Input_Type__c.field-meta.xml
<CustomField>
    <fullName>Search_Input_Type__c</fullName>
    <label>Search Input Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Picklist</fullName>
                <default>true</default>
                <label>Picklist</label>
            </value>
            <value>
                <fullName>Lookup</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Checkbox</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>